--- a/common/ezo_pmp_duo.yaml
+++ b/common/ezo_pmp_duo.yaml
@@ -153,8 +153,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     total_volume_dosed:
@@ -164,8 +164,8 @@ sensor:
       device_class: 'volume'
       unit_of_measurement: 'mL'
       disabled_by_default: true
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     absolute_total_volume_dosed:
@@ -175,8 +175,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     last_volume_requested:
@@ -186,8 +186,8 @@ sensor:
       state_class: total
       device_class: 'volume'
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     max_flow_rate:
@@ -195,8 +195,8 @@ sensor:
       name: Pump Waste - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     pump_voltage:
@@ -204,8 +204,8 @@ sensor:
       name: Pump Waste - Voltage
       disabled_by_default: true
       device_class: 'voltage'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     current_volume_dosed:
@@ -215,8 +215,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     total_volume_dosed:
@@ -226,8 +226,8 @@ sensor:
       disabled_by_default: true
       device_class: 'volume'
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     absolute_total_volume_dosed:
@@ -237,8 +237,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     last_volume_requested:
@@ -248,8 +248,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     max_flow_rate:
@@ -257,8 +257,8 @@ sensor:
       name: Pump Clean - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     pump_voltage:
@@ -266,8 +266,8 @@ sensor:
       name: Pump Clean - Voltage
       disabled_by_default: true
       device_class: 'voltage'
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
 
 binary_sensor:
   - platform: ezo_pmp
@@ -276,32 +276,32 @@ binary_sensor:
       id: pump_state_waste
       icon: mdi:pump
       name: Pump Waste - State
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     is_paused:
       id: is_paused_waste
       name: Pump Waste - Paused Status
       disabled_by_default: true
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     pump_state:
       id: pump_state_clean
       icon: mdi:pump
       name: Pump Clean - State
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     is_paused:
       id: is_paused_clean
       name: Pump Clean - Paused Status
       disabled_by_default: true
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
 
 text_sensor:
   - platform: ezo_pmp
@@ -310,8 +310,8 @@ text_sensor:
       id: dosing_mode_waste
       name: Pump Waste - Dosing Mode 
       icon: mdi:auto-mode
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_red
     calibration_status:
@@ -319,16 +319,16 @@ text_sensor:
       name: Pump Waste - Calibration Status
       # disabled_by_default: true
       icon: mdi:tape-measure
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     dosing_mode:
       id: dosing_mode_clean
       name: Pump Clean - Dosing Mode 
       icon: mdi:auto-mode
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: ezo_pmp
     id: ezo_pump_green
     calibration_status:
@@ -336,8 +336,8 @@ text_sensor:
       name: Pump Clean - Calibration Status
       # disabled_by_default: true
       icon: mdi:tape-measure
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
 
 number:
   - platform: template
@@ -352,8 +352,8 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     id: duration_waste
     icon: mdi:timer
@@ -366,8 +366,8 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     id: flow_rate_waste
     icon: mdi:waves-arrow-left
@@ -379,8 +379,8 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     id: volume_clean
     icon: mdi:pump
@@ -393,8 +393,8 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     id: duration_clean
     icon: mdi:timer
@@ -407,8 +407,8 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     id: flow_rate_clean
     icon: mdi:waves-arrow-right
@@ -420,8 +420,8 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
 
 button:
   - platform: template
@@ -435,8 +435,8 @@ button:
             return id(volume_waste).state;
           duration: !lambda |-
             return id(duration_waste).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Dose Continuously
     icon: mdi:infinity
@@ -444,8 +444,8 @@ button:
     on_press:
       - ezo_pmp.dose_continuously:
           id: ezo_pump_red
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Dose Volume
     icon: mdi:pump
@@ -455,8 +455,8 @@ button:
           id: ezo_pump_red
           volume: !lambda |-
             return id(volume_waste).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
@@ -468,8 +468,8 @@ button:
             return id(flow_rate_waste).state;
           duration: !lambda |-
             return id(duration_waste).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Pause Dosing
     icon: mdi:pause
@@ -477,8 +477,8 @@ button:
     on_press:
       - ezo_pmp.pause_dosing:
           id: ezo_pump_red
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Stop Dosing
     icon: mdi:stop
@@ -486,8 +486,8 @@ button:
     on_press:
       - ezo_pmp.stop_dosing:
           id: ezo_pump_red
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Clear Total Volume Dosed
     icon: mdi:backspace
@@ -495,8 +495,8 @@ button:
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_red
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Set Calibration Volume
     icon: mdi:tape-measure
@@ -506,8 +506,8 @@ button:
           id: ezo_pump_red
           volume: !lambda |-
             return id(volume_waste).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Waste - Clear Calibration Volume
     icon: mdi:cancel
@@ -515,8 +515,8 @@ button:
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_red
-    web_server:
-      sorting_group_id: sorting_group_pump_duo          
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo          
   - platform: template
     name: Pump Clean - Dose Volume for Time
     icon: mdi:clock-time-two-outline
@@ -528,8 +528,8 @@ button:
             return id(volume_clean).state;
           duration: !lambda |-
             return id(duration_clean).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Dose Continuously
     icon: mdi:infinity
@@ -537,8 +537,8 @@ button:
     on_press:
       - ezo_pmp.dose_continuously:
           id: ezo_pump_green
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Dose Volume
     icon: mdi:pump
@@ -548,8 +548,8 @@ button:
           id: ezo_pump_green
           volume: !lambda |-
             return id(volume_clean).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
@@ -561,8 +561,8 @@ button:
             return id(flow_rate_clean).state;
           duration: !lambda |-
             return id(duration_clean).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Pause Dosing
     icon: mdi:pause
@@ -570,8 +570,8 @@ button:
     on_press:
       - ezo_pmp.pause_dosing:
           id: ezo_pump_green
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Stop Dosing
     icon: mdi:stop
@@ -579,8 +579,8 @@ button:
     on_press:
       - ezo_pmp.stop_dosing:
           id: ezo_pump_green
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Clear Total Volume Dosed
     icon: mdi:backspace
@@ -588,8 +588,8 @@ button:
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_green
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Set Calibration Volume
     icon: mdi:tape-measure
@@ -599,8 +599,8 @@ button:
           id: ezo_pump_green
           volume: !lambda |-
             return id(volume_clean).state;
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
   - platform: template
     name: Pump Clean - Clear Calibration Volume
     icon: mdi:cancel
@@ -608,5 +608,5 @@ button:
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_green
-    web_server:
-      sorting_group_id: sorting_group_pump_duo
+    # web_server:
+    #   sorting_group_id: sorting_group_pump_duo
