--- a/common/ezo_pmp_extra.yaml
+++ b/common/ezo_pmp_extra.yaml
@@ -9,13 +9,13 @@ substitutions:
   update_pmp_5: "60s"  
   update_pmp_6: "60s"
 
-  sorting_group_pump_extra_weight: '84'
+  sorting_group_pump_orange_weight: '86'
 
 web_server:
   sorting_groups:
-    - id: sorting_group_pump_extra
+    - id: sorting_group_pump_orange
       name: "Pump - Orange"
-      sorting_weight: ${sorting_group_pump_extra_weight}
+      sorting_weight: ${sorting_group_pump_orange_weight}
 
 ezo_pmp:
   - id: ezo_pump_orange
@@ -80,8 +80,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     total_volume_dosed:
@@ -91,8 +91,8 @@ sensor:
       device_class: 'volume'
       unit_of_measurement: 'mL'
       disabled_by_default: true
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     absolute_total_volume_dosed:
@@ -102,8 +102,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     last_volume_requested:
@@ -113,8 +113,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     max_flow_rate:
@@ -122,8 +122,8 @@ sensor:
       name: Pump 2 - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     pump_voltage:
@@ -131,8 +131,8 @@ sensor:
       name: Pump 2 - Voltage
       disabled_by_default: true
       device_class: 'voltage'
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 binary_sensor:
   - platform: ezo_pmp
@@ -147,8 +147,8 @@ binary_sensor:
       id: is_paused_2
       name: Pump 2 - Paused Status
       disabled_by_default: true
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 text_sensor:
   - platform: ezo_pmp
@@ -157,8 +157,8 @@ text_sensor:
       id: dosing_mode_2
       name: Pump 2 - Dosing Mode 
       icon: mdi:auto-mode
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     calibration_status:
@@ -166,8 +166,8 @@ text_sensor:
       name: Pump 2 - Calibration Status
       # disabled_by_default: true
       icon: mdi:tape-measure
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 number:
   - platform: template
@@ -182,8 +182,8 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     id: duration_2
     icon: mdi:timer
@@ -196,8 +196,8 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     id: flow_rate_2
     icon: mdi:waves-arrow-right
@@ -209,8 +209,8 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 button:
   # TODO Make UI
@@ -225,8 +225,8 @@ button:
             return id(volume).state;
           duration: !lambda |-
             return id(duration).state;
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Dose Continuously
     icon: mdi:infinity
@@ -234,8 +234,8 @@ button:
     on_press:
       - ezo_pmp.dose_continuously:
           id: ezo_pump_orange
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Dose Volume
     icon: mdi:pump_orange
@@ -245,8 +245,8 @@ button:
           id: ezo_pump_orange
           volume: !lambda |-
             return id(volume).state;
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
@@ -258,8 +258,8 @@ button:
             return id(flow_rate).state;
           duration: !lambda |-
             return id(duration).state;
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Pause Dosing
     icon: mdi:pause
@@ -267,8 +267,8 @@ button:
     on_press:
       - ezo_pmp.pause_dosing:
           id: ezo_pump_orange
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Stop Dosing
     icon: mdi:stop
@@ -276,8 +276,8 @@ button:
     on_press:
       - ezo_pmp.stop_dosing:
           id: ezo_pump_orange
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Clear Total Volume Dosed
     icon: mdi:backspace
@@ -285,8 +285,8 @@ button:
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_orange
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
   # Calibrate
   - platform: template
@@ -298,8 +298,8 @@ button:
           id: ezo_pump_orange
           volume: !lambda |-
             return id(volume).state;
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Clear Calibration Volume
     icon: mdi:cancel
@@ -307,5 +307,5 @@ button:
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_orange
-    # web_server:
-    #   sorting_group_id: sorting_group_pump_extra
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
