--- a/common/temperature_dallas_2.yaml
+++ b/common/temperature_dallas_2.yaml
@@ -38,12 +38,13 @@ sensor:
       return id(temp_2).state * 9 / 5 + 32;
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 69
 
   # Calibration Temp. 2 at 0C
   - platform: template
     name: Calibration at 0°C  - Temp. 2
     id: cal_0_2_sen
+    disabled_by_default: true
     icon: mdi:thermometer-low
     unit_of_measurement: "°C"
     state_class: "measurement"
@@ -53,12 +54,13 @@ sensor:
       return {${cal_0_2}};
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 69
 
   # Calibration Temp. 2 at 100C
   - platform: template
     name: Calibration at 100°C - Temp. 2
     id: cal_100_2_sen
+    disabled_by_default: true
     icon: mdi:weather-sunny-alert
     unit_of_measurement: "°C"
     state_class: "measurement"
@@ -68,7 +70,7 @@ sensor:
       return {${cal_100_2}};
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 69
 
 binary_sensor:
   - platform: template
@@ -83,7 +85,7 @@ binary_sensor:
       }
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 69
 
 text_sensor:
   # Temperature Range 2
@@ -107,7 +109,7 @@ text_sensor:
       }
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 62
 
 number:
   # Temperature 2 when Cool
@@ -129,7 +131,7 @@ number:
         - component.update: temp_range_2
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 69
 
   # Temperature 2 when Warm
   - platform: template
@@ -150,4 +152,4 @@ number:
         - component.update: temp_range_2
     web_server:
       sorting_group_id: sorting_group_temperature
-      sorting_weight: 60
+      sorting_weight: 69
