--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -10,7 +10,7 @@ packages:
   aquapi: !include common/aquapi.yaml
   # ota_https: !include common/ota_https.yaml
   dallas: !include common/temperature_dallas.yaml
-  optical: !include common/optical.yaml
+  water_level: !include common/water_level.yaml
   binary: !include common/binary.yaml
   # ir_receiver: !include common/ir_receiver.yaml
   # dht: !include common/dht.yaml
