--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -14,7 +14,8 @@ binary_sensor:
     name: "Binary 1"
     filters:
       - delayed_on_off: 30ms
-
+    web_server:
+      sorting_group_id: sorting_group_misc
   - platform: gpio
     id: leak_sensor
     pin: 
@@ -26,3 +27,5 @@ binary_sensor:
     name: "Leak Sensor"
     filters:
       - delayed_on_off: 30ms
+    web_server:
+      sorting_group_id: sorting_group_misc
